--- a/index.html
+++ b/index.html
@@ -1,3 +1,61 @@
+<head> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>बिहार में राजनीति का अर्थ और महत्व (2025)</title>
+  <meta name="description" content="बिहार की राजनीति में क्या महत्व है? जानिए इसका ऐतिहासिक और वर्तमान परिप्रेक्ष्य।">
+  <link rel="canonical" href="https://skzblog.in/biharpolitics/" />
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="बिहार की राजनीति " />
+  <meta property="og:description" content=" बिहार में राजनीति का क्या मतलब है?।" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://skzblog.in/biharpolitics/" />
+  <meta property="og:locale" content="hi_IN" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="बिहार की राजनीति" />
+  <meta name="twitter:description" content="बिहार में राजनीति का क्या मतलब है?।" />
+
+  <!-- SEO Schema.org JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "headline": " बिहार राजनीति ",
+    "description": "बिहार में राजनीति का क्या मतलब है?।",
+    "author": {
+      "@type": "Person",
+      "name": "Your Name"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "SKZ Blog",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://skzblog.in/logo.png"
+      }
+    },
+    "datePublished": "2025-08-28",
+    "mainEntityOfPage": "https://skzblog.in/biharpolitics/"
+  }
+  </script>
+
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2483895828585684"
+     crossorigin="anonymous"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-2483895828585684",
+      enable_page_level_ads: true
+    });
+  </script>
+
+  <!-- Tailwind CSS & Fonts -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
+
 <!DOCTYPE html>
 <html lang="hi">
 <head>
@@ -415,3 +473,4 @@
     window.scrollTo({ top: 0, behavior: "smooth" });
   });
 </script>
+
