--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div class="section-icon mx-auto">
                         <i class="fas fa-landmark"></i>
                     </div>
-                    <h2 class="text-3xl font-bold text-gray-800 mb-4">1. परिचय: बिहार का राजनीतिक परिदृश्य</h2>
+                    <h2 class="text-3xl font-bold text-gray-800 mb-4">परिचय: बिहार का राजनीतिक परिदृश्य</h2>
                 </div>
                 <p class="text-lg text-gray-700 leading-relaxed">
                     बिहार की राजनीति जाति, समुदाय, क्षेत्रीयता और करिश्माई नेतृत्व का एक जटिल ताना-बाना है। स्वतंत्रता के बाद यह भारतीय राष्ट्रीय कांग्रेस के वर्चस्व में रही, लेकिन 1960 के दशक के अंत में कांग्रेस-विपक्ष गठबंधनों का दौर शुरू हुआ। 1990 के दशक में मंडल राजनीति (सामाजिक न्याय) और मंदिर राजनीति (हिंदुत्व) के उदय ने कांग्रेस के वर्चस्व को तोड़ दिया और पिछड़े वर्ग (ओबीसी) के नेताओं को केंद्र में ला दिया। तब से राजनीतिक कथा समाजवादी विचारधारा, जाति-आधारित लामबंदी और रणनीतिक गठबंधनों का अस्थिर मिश्रण रही है, जिसमें मुख्य रूप से जनता दल (यूनाइटेड) [जेडीयू], राष्ट्रीय जनता दल (राजद) और भारतीय जनता पार्टी (भाजपा) शामिल रहे।
@@ -175,7 +175,7 @@
         <!-- Era 1: Congress Dominance -->
         <section id="era1" class="mb-16">
             <div class="text-center mb-12">
-                <h2 class="text-3xl font-bold text-gray-800 mb-4">2. चरण 1: कांग्रेस का वर्चस्व (1950 - 1967)</h2>
+                <h2 class="text-3xl font-bold text-gray-800 mb-4">चरण 1: कांग्रेस का वर्चस्व (1950 - 1967)</h2>
                 <div class="w-24 h-1 bg-blue-600 mx-auto"></div>
             </div>
 
@@ -183,7 +183,7 @@
                 <!-- Timeline Item 1 -->
                 <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                     <div class="timeline-dot"></div>
-                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">2.1 1952-1957: पहली बिहार विधानसभा</h3>
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 1952-1957: पहली बिहार विधानसभा</h3>
                     <div class="mb-4">
                         <span class="party-congress px-3 py-1 rounded-full text-sm">कांग्रेस</span>
                     </div>
@@ -198,7 +198,7 @@
                 <!-- Timeline Item 2 -->
                 <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                     <div class="timeline-dot"></div>
-                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">2.2 1957-1962: दूसरी विधानसभा</h3>
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 1957-1962: दूसरी विधानसभा</h3>
                     <div class="mb-4">
                         <span class="party-congress px-3 py-1 rounded-full text-sm">कांग्रेस</span>
                     </div>
@@ -212,7 +212,7 @@
                 <!-- Timeline Item 3 -->
                 <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                     <div class="timeline-dot"></div>
-                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">2.3 1962-1967: तीसरी विधानसभा</h3>
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 1962-1967: तीसरी विधानसभा</h3>
                     <div class="mb-4">
                         <span class="party-congress px-3 py-1 rounded-full text-sm">कांग्रेस</span>
                     </div>
@@ -228,7 +228,7 @@
         <!-- Era 2: Instability and Socialism -->
         <section id="era2" class="mb-16">
             <div class="text-center mb-12">
-                <h2 class="text-3xl font-bold text-gray-800 mb-4">3. चरण 2: अस्थिरता और समाजवाद का उदय (1967 - 1990)</h2>
+                <h2 class="text-3xl font-bold text-gray-800 mb-4">चरण 2: अस्थिरता और समाजवाद का उदय (1967 - 1990)</h2>
                 <div class="w-24 h-1 bg-green-600 mx-auto"></div>
             </div>
 
@@ -236,7 +236,7 @@
                 <!-- Continue with similar structure for all sections -->
                 <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                     <div class="timeline-dot" style="background: #ef4444;"></div>
-                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">3.1 1967: चौथी विधानसभा - पहली गैर-कांग्रेसी सरकार</h3>
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 1967: चौथी विधानसभा - पहली गैर-कांग्रेसी सरकार</h3>
                     <div class="mb-4">
                         <span class="bg-gray-600 text-white px-3 py-1 rounded-full text-sm">एसवीडी गठबंधन</span>
                     </div>
@@ -255,7 +255,7 @@
             <!-- Timeline Item 5 -->
             <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                 <div class="timeline-dot" style="background: #ef4444;"></div>
-                <h3 class="text-2xl font-semibold text-gray-800 mb-4">3.2 1969-1972: राष्ट्रपति शासन और चुनाव</h3>
+                <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 1969-1972: राष्ट्रपति शासन और चुनाव</h3>
                 <ul class="list-disc list-inside text-gray-700 space-y-2">
                     <li>1969 में राष्ट्रपति शासन लगाया गया। चुनावों में इंदिरा गांधी की कांग्रेस (आई) सबसे बड़ी पार्टी बनी, लेकिन बहुमत से दूर रही।</li>
                     <li><strong>मुख्यमंत्री:</strong> दरोगा प्रसाद राय (कांग्रेस-आई के समर्थन से), फिर 1970 में कर्पूरी ठाकुर (गैर-कांग्रेसी गठबंधन) जो जल्द ही गिर गया।</li>
@@ -265,7 +265,7 @@
             <!-- Timeline Item 6 -->
             <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                 <div class="timeline-dot" style="background: #128807;"></div>
-                <h3 class="text-2xl font-semibold text-gray-800 mb-4">3.3 1972-1977: पाँचवीं विधानसभा - कांग्रेस की वापसी</h3>
+                <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 1972-1977: पाँचवीं विधानसभा - कांग्रेस की वापसी</h3>
                 <ul class="list-disc list-inside text-gray-700 space-y-2">
                     <li><strong>शासक दल:</strong> भारतीय राष्ट्रीय कांग्रेस (आई)</li>
                     <li><strong>मुख्यमंत्री:</strong> केदार पांडे (1972-73), फिर अब्दुल गफूर (1973-75)। आपातकाल (1975-77) के दौरान राष्ट्रपति शासन।</li>
@@ -275,7 +275,7 @@
             <!-- Timeline Item 7 -->
             <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                 <div class="timeline-dot" style="background: #008000;"></div>
-                <h3 class="text-2xl font-semibold text-gray-800 mb-4">3.4 1977-1980: छठी विधानसभा - जनता पार्टी की लहर</h3>
+                <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 1977-1980: छठी विधानसभा - जनता पार्टी की लहर</h3>
                 <ul class="list-disc list-inside text-gray-700 space-y-2">
                     <li><strong>शासक दल:</strong> जनता पार्टी (आपातकाल के बाद सभी गैर-कांग्रेसी दलों का विलय)</li>
                     <li><strong>मुख्यमंत्री:</strong> कर्पूरी ठाकुर</li>
@@ -286,7 +286,7 @@
             <!-- Timeline Item 8 -->
             <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                 <div class="timeline-dot" style="background: #128807;"></div>
-                <h3 class="text-2xl font-semibold text-gray-800 mb-4">3.5 1980-1989: सातवीं और आठवीं विधानसभा - कांग्रेस का अंतिम कार्यकाल</h3>
+                <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 1980-1989: सातवीं और आठवीं विधानसभा - कांग्रेस का अंतिम कार्यकाल</h3>
                 <ul class="list-disc list-inside text-gray-700 space-y-2">
                     <li><strong>शासक दल:</strong> भारतीय राष्ट्रीय कांग्रेस (आई)</li>
                     <li><strong>मुख्यमंत्री:</strong> जगन्नाथ मिश्र (1980-83), चंद्रशेखर सिंह (1983-85), बिंदेश्वरी दुबे (1985-88), भागवत झा आजाद (1988-89), सत्येंद्र नारायण सिंह (1989)।</li>
@@ -298,14 +298,14 @@
         <!-- Era 3: मंडल क्रांति और राजद का वर्चस्व (1990 - 2005) -->
         <section id="era3" class="mb-16">
             <div class="text-center mb-12">
-                <h2 class="text-3xl font-bold text-gray-800 mb-4">4. चरण 3: मंडल क्रांति और राजद का वर्चस्व (1990 - 2005)</h2>
+                <h2 class="text-3xl font-bold text-gray-800 mb-4"> चरण 3: मंडल क्रांति और राजद का वर्चस्व (1990 - 2005)</h2>
                 <div class="w-24 h-1 bg-yellow-600 mx-auto"></div>
             </div>
             <div class="grid md:grid-cols-1 gap-8">
                 <!-- Timeline Item 9 -->
                 <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                     <div class="timeline-dot" style="background: #008000;"></div>
-                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">4.1 1990-1995: नवमी विधानसभा - लालू प्रसाद यादव का उदय</h3>
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 1990-1995: नवमी विधानसभा - लालू प्रसाद यादव का उदय</h3>
                     <ul class="list-disc list-inside text-gray-700 space-y-2">
                         <li><strong>शासक दल:</strong> जनता दल (जेडी)</li>
                         <li><strong>मुख्यमंत्री:</strong> लालू प्रसाद यादव</li>
@@ -316,7 +316,7 @@
                 <!-- Timeline Item 10 -->
                 <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                     <div class="timeline-dot" style="background: #008000;"></div>
-                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">4.2 1995-2000: दसवीं विधानसभा - राजद का दौर शुरू</h3>
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 1995-2000: दसवीं विधानसभा - राजद का दौर शुरू</h3>
                     <ul class="list-disc list-inside text-gray-700 space-y-2">
                         <li><strong>शासक दल:</strong> राष्ट्रीय जनता दल (राजद) (लालू ने 1997 में जनता दल से अलग होकर राजद बनाया)।</li>
                         <li><strong>मुख्यमंत्री:</strong> लालू प्रसाद यादव ने 1997 में चारा घोटाले में चार्जशीट होने के बाद इस्तीफा देकर पत्नी राबड़ी देवी को मुख्यमंत्री बनाया।</li>
@@ -327,7 +327,7 @@
                 <!-- Timeline Item 11 -->
                 <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                     <div class="timeline-dot" style="background: #ff9933;"></div>
-                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">4.3 2000-2005: ग्यारहवीं विधानसभा - एनडीए का उदय और अधूरे जनादेश</h3>
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 2000-2005: ग्यारहवीं विधानसभा - एनडीए का उदय और अधूरे जनादेश</h3>
                     <ul class="list-disc list-inside text-gray-700 space-y-2">
                         <li><strong>हालात:</strong> चुनावों में अधूरा जनादेश।</li>
                         <li><strong>शासक गठबंधन:</strong> राष्ट्रीय जनतांत्रिक गठबंधन (एनडीए) – समता पार्टी (बाद में जेडीयू) और भाजपा।</li>
@@ -343,14 +343,14 @@
         <!-- Era 4: नीतीश कुमार का दौर - विकास और राजनीतिक पलटियाँ (2005 - वर्तमान) -->
         <section id="era4" class="mb-16">
             <div class="text-center mb-12">
-                <h2 class="text-3xl font-bold text-gray-800 mb-4">5. चरण 4: नीतीश कुमार का दौर - विकास और राजनीतिक पलटियाँ (2005 - वर्तमान)</h2>
+                <h2 class="text-3xl font-bold text-gray-800 mb-4"> चरण 4: नीतीश कुमार का दौर - विकास और राजनीतिक पलटियाँ (2005 - वर्तमान)</h2>
                 <div class="w-24 h-1 bg-blue-800 mx-auto"></div>
             </div>
             <div class="grid md:grid-cols-1 gap-8">
                 <!-- Timeline Item 12 -->
                 <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                     <div class="timeline-dot" style="background: #0080ff;"></div>
-                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">5.1 नवंबर 2005 - 2010: बारहवीं विधानसभा - "सुशासन"</h3>
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4"> नवंबर 2005 - 2010: बारहवीं विधानसभा - "सुशासन"</h3>
                     <ul class="list-disc list-inside text-gray-700 space-y-2">
                         <li><strong>शासक गठबंधन:</strong> एनडीए (जेडीयू + भाजपा)</li>
                         <li><strong>मुख्यमंत्री:</strong> नीतीश कुमार</li>
@@ -362,7 +362,7 @@
                 <!-- Timeline Item 13 -->
                 <div class="bg-white rounded-2xl shadow-xl p-8 timeline-item hover-scale">
                     <div class="timeline-dot" style="background: #0080ff;"></div>
-                    <h3 class="text-2xl font-semibold text-gray-800 mb-4">5.2 2010-2015: तेरहवीं विधानसभा - एनडीए की जीत और टूट</h3>
+                    <h3 class="text-2xl font-semibold text-gray-800 mb-4"> 2010-2015: तेरहवीं विधानसभा - एनडीए की जीत और टूट</h3>
                     <ul class="list-disc list-inside text-gray-700 space-y-2">
                         <li><strong>शासक गठबंधन:</strong> एनडीए (जेडीयू + भाजपा)</li>
                         <li><strong>मुख्यमंत्री:</strong> नीतीश कुमार</li>
@@ -472,4 +472,6 @@
   document.getElementById("backToTop").addEventListener("click", () => {
     window.scrollTo({ top: 0, behavior: "smooth" });
   });
-</script>
+</script> 
+
+              
